--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Pokeking Translator",
-  "version": "2.3",
+  "version": "4.0",
   "description": "Auto-replaces keywords on all sites. built solely for pokeking",
   "icons": {
     "16": "icons/slax16.png",
@@ -16,12 +16,12 @@
     {
       "matches": ["<all_urls>"],
       "js": ["browser-polyfill.min.js", "content.js"],
-      "run_at": "document_idle"
+      "run_at": "document_start"
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["dictionary.json"],
+      "resources": ["dictionary.json", "injected_script.js"],
       "matches": ["<all_urls>"]
     }
   ],
