--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Pokeking Translator",
-  "version": "4.2.1",
-  "description": "Auto-replaces keywords on all sites. built solely for pokeking",
+  "version": "4.2.3",
+  "description": "Auto-replaces keywords on Pokeking site. Can be activated on other sites manually.",
   "icons": {
     "16": "icons/slax16.png",
     "48": "icons/slax48.png",
     "128": "icons/slax128.png"
   },
-  "permissions": [],
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
   "host_permissions": [
-    "<all_urls>"
+    "*://*.pokeking.icu/*",
+    "<all_urls>" 
+
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://*.pokeking.icu/*"], 
       "js": ["browser-polyfill.min.js", "content.js"],
       "run_at": "document_start"
     }
@@ -27,7 +32,7 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-    "id": "pokeking-translator-jassimp-ww@github.com"    
+    "id": "pokeking-translator-jassimp-ww@github.com"
   }
   }
 }
