--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Pokeking Translator",
-  "version": "4.3",
+  "version": "4.3.1",
   "description": "Auto-replaces keywords on Pokeking site. Can be activated on other sites manually.",
   "icons": {
     "16": "icons/slax16.png",
@@ -32,7 +32,8 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-    "id": "pokeking-translator-jassimp-ww@github.com"
+    "id": "pokeking-translator-jassimp-ww@github.com",
+    "strict_min_version": "120.0"
   }
   }
 }
