--- a/.github/workflows/update-dictionary.yml
+++ b/.github/workflows/update-dictionary.yml
@@ -3,9 +3,13 @@ name: Update Dictionary on GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main # Trigger when you push to the main branch
   schedule:
-    - cron: '35 6 * * *' # Runs daily at 10:25 PM PST
+    # Runs daily at 6:35 AM UTC (10:35 PM PDT / 11:35 PM PST)
+    # The previous cron '25 6 * * *' was 6:25 AM UTC (10:25 PM PST)
+    # You had a duplicate line. This one (35 6) will override if it's the last one read.
+    # I've chosen 35 to resolve the conflict.
+    - cron: '35 6 * * *' 
   workflow_dispatch: {} # Allows manual triggering from the GitHub Actions UI
 
 jobs:
@@ -16,17 +20,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --- REMOVE THESE TWO STEPS ---
-    # - name: Set up Node.js (or Python/Ruby if your script uses them)
-    #   uses: actions/setup-node@v4
-    #   with:
-    #     node-version: '18'
-    #
-    # - name: Install dependencies (if your script needs them)
-    #   run: npm install
-    # ----------------------------
+    # The 'Set up Node.js' and 'Install dependencies' steps are removed
+    # because they are not needed for just fetching with 'curl'.
+    # You had conflicting uncommented and commented versions of these.
 
     - name: Generate dictionary.json
+      # This curl command is the core of fetching from your Google Apps Script web app
       run: |
         mkdir -p pokeking-translator # Ensure the directory exists
         curl -o pokeking-translator/dictionary.json "https://script.google.com/macros/s/AKfycbwec1juqGwtrBroLbUEz3tACHXrjS7JKjHhPY7C3Puq_uHohV5bZWduQbPzqG1kclVc/exec"
@@ -35,6 +34,12 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
+        # Check for changes before adding and committing
         git update-index --refresh
         git diff-index --quiet HEAD -- || (git add pokeking-translator/dictionary.json && git commit -m "Automated dictionary update")
         git push
+      # IMPORTANT: Ensure this pushes to the correct branch for GitHub Pages.
+      # By default, git push will push to the branch checked out by actions/checkout, which is 'main'.
+      # If your Pages branch is different (e.g., gh-pages), you'd need:
+      # git push origin HEAD:gh-pages
+      # However, if your Pages branch *is* 'main', then `git push` is fine.
