--- a/.github/workflows/update-dictionary.yml
+++ b/.github/workflows/update-dictionary.yml
@@ -24,10 +24,10 @@ jobs:
         set -x # This command prints each command before it's executed, very useful for debugging!
         mkdir -p pokeking-translator
         # *** ADD -L HERE ***
-        curl -L -o pokeking-translator/dictionary.json "https://script.google.com/macros/s/AKfycbxCamQitK4Jrl2FG4l2oMNhK0orW1I3mtrTvMRoV7JHgc8fQTSoOuiG6Q1D5L-UybfM/exec"
+        curl -L -o dictionary.json "https://script.google.com/macros/s/AKfycbxCamQitK4Jrl2FG4l2oMNhK0orW1I3mtrTvMRoV7JHgc8fQTSoOuiG6Q1D5L-UybfM/exec"
         
         echo "--- Content of downloaded dictionary.json ---"
-        cat pokeking-translator/dictionary.json
+        cat dictionary.json
         echo "---------------------------------------------"
 
     - name: Commit and push changes
@@ -40,17 +40,17 @@ jobs:
         # This will convert the file to LF if it's CRLF, making Git happy
         # And it will also ensure Git considers it binary-safe for diffing if needed
         # (though JSON is text, sometimes tools add BOM or other subtle things)
-        unix2dos pokeking-translator/dictionary.json || true # Try converting to CRLF just in case
-        dos2unix pokeking-translator/dictionary.json || true # Convert to LF (standard for Unix)
+        unix2dos dictionary.json || true # Try converting to CRLF just in case
+        dos2unix dictionary.json || true # Convert to LF (standard for Unix)
         
         echo "--- Git Status before diff check ---"
         git status
         echo "------------------------------------"
 
-        echo "--- Detailed Git Diff (pokeking-translator/dictionary.json vs HEAD) ---"
+        echo "--- Detailed Git Diff (dictionary.json vs HEAD) ---"
         # Compare the working directory file against the version in HEAD,
         # specifically showing differences including whitespace if applicable
-        git diff --ignore-space-at-eol -- pokeking-translator/dictionary.json
+        git diff --ignore-space-at-eol -- dictionary.json
         echo "-------------------------------------------------------------------"
 
         # IMPORTANT: Now, let's use a more robust way to check for changes that Git can see.
@@ -59,7 +59,7 @@ jobs:
         # We need to add the file first to the index, then compare
         
         # Add the file to the staging area (index) to ensure Git's internal tracking is updated
-        git add pokeking-translator/dictionary.json
+        git add dictionary.json
 
         echo "--- Git Status after git add ---"
         git status
