--- a/.github/workflows/update-dictionary.yml
+++ b/.github/workflows/update-dictionary.yml
@@ -6,7 +6,7 @@ on:
       - main # Trigger when you push to the main branch
   schedule:
     # Runs daily at 7:05 AM UTC (11:05 PM PST)
-    - cron: '20 7 * * *'
+    - cron: '20 * * * *'
   workflow_dispatch: {} # Allows manual triggering from the GitHub Actions UI
 
 jobs:
