--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Pokeking Translator",
-  "version": "5.2.3",
+  "version": "5.2.4",
   "description": "Auto-replaces keywords on Pokeking site. Can be activated on other sites manually.",
   "icons": {
     "16": "icons/slax16.png",
@@ -28,6 +28,9 @@
     {
       "matches": ["*://*.pokeking.icu/*"],
       "js": ["browser-polyfill.min.js", "content.js"],
+      "css": [
+      "pokeking-modals.css",
+      "pokeking-buttons.css"],
       "run_at": "document_start"
     }
   ],
